<resources>
    <string name="app_name">Bus Tracking VFSTR</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="signup_to_continue">Signup to continue</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="full_name">Full Name</string>
    <string name="hi_fill_the_details">Hi , Fill The Details</string>
    <string name="todo">TODO</string>
    <string name="user_profile">User Profile</string>
    <string name="update">Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin_to_continue">Signin to continue</string>
    <string name="hello_admin_welcome_back">Hello Admin , Welcome Back</string>
    <string name="go">Go</string>

</resources>