<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/AppBg"
    tools:context=".Driver_Login"
    android:padding="18dp">
    <ImageView
        android:id="@+id/logoimage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/bus100"
        android:contentDescription="@string/todo" />

    <android.widget.TextView
        android:id="@+id/logo_name"
        android:text="Hello Driver , welcome back"
        style="@style/headings"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/signin_to_continue"

        android:textSize="18sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:hint="@string/username"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ></com.google.android.material.textfield.TextInputEditText>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/loginbutton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonsstyle"
                android:layout_marginBottom="5dp"
                android:text="Go" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>